[gd_scene load_steps=3 format=3 uid="uid://b8hv13kl133"]

[ext_resource type="Script" path="res://TestFolder/Rooms/game_start_screen.gd" id="1_n7or1"]

[sub_resource type="LabelSettings" id="LabelSettings_jqovv"]
font_size = 100

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n7or1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacingTop" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Secret Game"
label_settings = SubResource("LabelSettings_jqovv")
horizontal_alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="ButtonSpacing_01" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.03

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Options
"

[node name="ButtonSpacing_02" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.03

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit
"

[node name="SpacingBottom" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="VBoxContainer/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
